<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mchat_bg_room">

    <io.agora.metachat.widget.MChatCommonTitleView
        android:id="@+id/title_view"
        style="@style/mchat_title_view"
        app:layout_constraintTop_toTopOf="parent"
        app:mchat_ctv_centerText="@string/mchat_create_a_room"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_room_cover"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/mchat_room_cover0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/mchat_room_name"
        android:textColor="@color/mchat_black"
        android:textSize="@dimen/mchat_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_room_cover" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room_name_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/mchat_ic_random"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/mchat_random"
        android:textColor="@color/mchat_black"
        android:textSize="@dimen/mchat_sp_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_room_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_room_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_room_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/mchat_bg_rect_radius50_white"
        android:maxLength="12"
        android:maxLines="1"
        android:paddingHorizontal="31dp"
        android:textSize="@dimen/mchat_sp_18"
        android:textStyle="bold"
        android:hint="@string/mchat_room_create_room_name_hint"
        android:textColor="@color/mchat_040925"
        app:layout_constraintTop_toBottomOf="@id/tv_room_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room_create_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/mchat_room_create_encrypt"
        android:textColor="@color/mchat_black"
        android:textSize="@dimen/mchat_sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_room_name" />

    <RadioGroup
        android:id="@+id/rg_room_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/rb_public"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_room_create_encrypt">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:button="@drawable/mchat_bg_cb_check_status"
            android:text="@string/mchat_public" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:button="@drawable/mchat_bg_cb_check_status"
            android:text="@string/mchat_encrypted" />

    </RadioGroup>

    <io.agora.metachat.widget.MChatRoomEncryptionInputView
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="number"
        android:textCursorDrawable="@drawable/mchat_bg_edit_cursor"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_room_permissions"
        app:mchat_backColor="@color/mchat_white"
        app:mchat_checkedColor="@color/mchat_white"
        app:mchat_defaultColor="@color/mchat_white"
        app:mchat_isPwd="false"
        app:mchat_isWaitInput="true"
        app:mchat_round="8dp"
        app:mchat_textColor="@color/mchat_040925"
        app:mchat_textLength="4"
        app:mchat_textSize="@dimen/mchat_sp_18"
        app:mchat_waitInputColor="@color/mchat_main_color_009fff"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/mchat_room_set_password_tips"
        android:textColor="@color/mchat_fa396a"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_room"
        style="@style/mchat_btn_full"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:text="@string/mchat_create"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>