<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/mchat_bg_rect_radius16_light_grey"
    android:paddingTop="25dp"
    android:paddingBottom="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mchat_select_your_profile_picture"
        android:textColor="@color/mchat_040925"
        android:textSize="@dimen/mchat_sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_portrait"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:paddingStart="30dp"
        android:paddingEnd="4dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:spanCount="3"
        tools:listitem="@layout/mchat_item_portrait_list" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="22dp"
        android:paddingVertical="12dp"
        android:text="@string/mchat_cancel"
        android:textAllCaps="false"
        android:textColor="@color/mchat_756e98"
        android:textSize="@dimen/mchat_sp_14"
        android:textStyle="bold"
        app:backgroundTint="@color/mchat_dedaea"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/gl50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_portrait" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="22dp"
        android:paddingVertical="12dp"
        android:text="@string/mchat_confirm"
        android:textAllCaps="false"
        android:textColor="@color/mchat_white"
        android:textSize="@dimen/mchat_sp_14"
        android:textStyle="bold"
        app:backgroundTint="@color/mchat_6842F6"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl50"
        app:layout_constraintTop_toTopOf="@id/mb_left"
        app:layout_constraintBottom_toBottomOf="@id/mb_left"/>
</androidx.constraintlayout.widget.ConstraintLayout>