<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/mchat_bg_rect_radius16_white"
    android:minWidth="300dp"
    android:minHeight="240dp"
    android:paddingVertical="30dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mchat_downloading"
        android:textColor="@color/mchat_040925"
        android:textSize="@dimen/mchat_sp_16"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/mchat_download_content"
        android:textColor="@color/mchat_6c7192"
        android:textSize="@dimen/mchat_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_title" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/mchat_3c4267"
        android:textSize="@dimen/mchat_sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_content"
        tools:text="100%" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@id/tv_progress"
        app:layout_constraintEnd_toStartOf="@id/tv_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_progress"
        tools:progress="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="@string/mchat_cancel"
        android:textAllCaps="false"
        android:textColor="@color/mchat_756e98"
        android:textSize="@dimen/mchat_sp_14"
        android:textStyle="bold"
        app:backgroundTint="@color/mchat_dedaea"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>